[package]
name = "addin1c-test"
version = "0.2.0"
edition = "2021"
description = "library for testing 1C:Enterpirse 8 add-ins"
license = "MIT"
categories = []
repository = "https://github.com/medigor/addin1c"
homepage = "https://github.com/medigor/addin1c"
keywords = ["1c-enterpirse", "native-api", "addin"]
readme = "crate-info.md"

[dependencies]
libloading = "0.8"
utf16_lit = "2.0"

[build-dependencies]
cc = "1.0"
