[package]
name = "addin1c"
version = "0.7.0"
edition = "2021"
description = "Helper for creating 1C:Enterpirse 8 add-ins with Native API technology"
license = "MIT"
categories = []
repository = "https://github.com/medigor/addin1c"
homepage = "https://github.com/medigor/addin1c"
keywords = ["1c-enterprise", "native-api", "addin"]
readme = "README.md"

[dependencies]
smallvec = "1.13"
utf16_lit = "2.0"
chrono = { version = "0.4", optional = true }

[features]
chrono = ["dep:chrono"]
